--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -8,6 +8,7 @@
 		"debounce": "^2.1.1",
 		"fast-deep-equal": "^3.1.3",
 		"fuse.js": "^7.0.0",
+		"posthog-js": "^1.215.3",
 		"pretty-bytes": "^6.1.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
