--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "claude-dev",
 	"displayName": "Cline",
 	"description": "Autonomous coding agent right in your IDE, capable of creating/editing files, running commands, using the browser, and more with your permission every step of the way.",
-	"version": "3.3.2",
+	"version": "3.3.4",
 	"icon": "assets/icons/icon.png",
 	"galleryBanner": {
 		"color": "#617A91",
@@ -185,7 +185,7 @@
 				"cline.enableTelemetry": {
 					"type": "boolean",
 					"default": false,
-					"description": "Enables extension to post anonymous usage data to help improve the product."
+					"description": "Enables extension to post anonymous error tracking & usage data to help improve the product."
 				}
 			}
 		}
