--- a/package.json
+++ b/package.json
@@ -246,6 +246,7 @@
 		"axios": "^1.7.4",
 		"cheerio": "^1.0.0",
 		"chokidar": "^4.0.1",
+		"claude-dev": "file:",
 		"clone-deep": "^4.0.1",
 		"default-shell": "^2.2.0",
 		"delay": "^6.0.0",
