--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -21,7 +21,8 @@
 		"rewire": "^7.0.0",
 		"styled-components": "^6.1.13",
 		"typescript": "^5.7.3",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"webview-ui": "file:"
 	},
 	"overrides": {
 		"typescript": "^5.7.3"
