--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "haiergi-dev",
-	"displayName": "Cline",
+	"displayName": "HaierGI",
 	"description": "Autonomous coding agent right in your IDE, capable of creating/editing files, running commands, using the browser, and more with your permission every step of the way.",
 	"version": "0.0.1",
 	"icon": "assets/icons/icon.png",
@@ -50,7 +50,7 @@
 			"activitybar": [
 				{
 					"id": "claude-dev-ActivityBar",
-					"title": "Cline",
+					"title": "GI",
 					"icon": "assets/icons/icon.svg"
 				}
 			]
@@ -256,6 +256,7 @@
 		"firebase": "^11.2.0",
 		"get-folder-size": "^5.0.0",
 		"globby": "^14.0.2",
+		"haier-gi-dev": "file:",
 		"haiergi-dev": "file:",
 		"ignore": "^7.0.3",
 		"isbinaryfile": "^5.0.2",
