--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "it-gi-dev",
+	"name": "generate-infinity",
 	"displayName": "GI",
 	"description": "Empowering developers to build beyond boundaries with AI-driven automation and future-ready architectures. Turn complex code into limitless innovation—where every line scales infinitely.",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"icon": "assets/icons/icon.png",
 	"galleryBanner": {
 		"color": "#617A91",
