--- a/package.json
+++ b/package.json
@@ -85,6 +85,11 @@
 				"icon": "$(account)"
 			},
 			{
+				"command": "cline.accountLoginClicked",
+				"title": "Open RAG ACCount",
+				"icon": "$(account)"
+			},
+			{
 				"command": "cline.openInNewTab",
 				"title": "打开新选项卡",
 				"category": "Cline"
@@ -114,6 +119,11 @@
 				},
 				{
 					"command": "cline.settingsButtonClicked",
+					"group": "navigation@5",
+					"when": "view == claude-devS.SidebarProvider"
+				},
+				{
+					"command": "cline.accountLoginClicked",
 					"group": "navigation@5",
 					"when": "view == claude-devS.SidebarProvider"
 				},
@@ -236,6 +246,7 @@
 		"@anthropic-ai/sdk": "^0.26.0",
 		"@anthropic-ai/vertex-sdk": "^0.4.1",
 		"@google/generative-ai": "^0.18.0",
+		"@haier/iam": "^1.6.0",
 		"@mistralai/mistralai": "^1.3.6",
 		"@modelcontextprotocol/sdk": "^1.0.1",
 		"@types/clone-deep": "^4.0.4",
@@ -256,10 +267,12 @@
 		"firebase": "^11.2.0",
 		"get-folder-size": "^5.0.0",
 		"globby": "^14.0.2",
+		"i": "^0.3.7",
 		"ignore": "^7.0.3",
 		"isbinaryfile": "^5.0.2",
 		"mammoth": "^1.8.0",
 		"monaco-vscode-textmate-theme-converter": "^0.1.7",
+		"npm": "^11.1.0",
 		"openai": "^4.83.0",
 		"os-name": "^6.0.0",
 		"p-wait-for": "^5.0.2",
