--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -4,11 +4,14 @@
 	"private": true,
 	"dependencies": {
 		"@floating-ui/react": "^0.27.4",
+		"@haier/iam": "^1.6.0",
 		"@vscode/webview-ui-toolkit": "^1.4.0",
 		"debounce": "^2.1.1",
 		"fast-deep-equal": "^3.1.3",
 		"fuse.js": "^7.0.0",
 		"fzf": "^0.5.2",
+		"i": "^0.3.7",
+		"npm": "^11.1.0",
 		"pretty-bytes": "^6.1.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
